--- a/app/src/main/res/layout/item_ask_song.xml
+++ b/app/src/main/res/layout/item_ask_song.xml
@@ -26,65 +26,75 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/post_user_name_tv"
-                style="@style/TwoTextMain"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="鹏君" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/post_user_date_tv"
+                    style="@style/TwoTextSecond"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    tools:text="2017.1.1" />
+
+                <TextView
+                    android:id="@+id/post_user_name_tv"
+                    style="@style/TwoTextMain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="鹏君" />
+            </RelativeLayout>
+
 
             <TextView
-                android:id="@+id/post_user_date_tv"
-                style="@style/TwoTextSecond"
+                android:id="@+id/post_user_title_tv"
+                style="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="2017.1.1" />
+                android:maxLines="1"
+                tools:text="求谱啊啊~~~~" />
+
+            <TextView
+                android:id="@+id/post_user_content_tv"
+                style="@style/TextAppearance.AppCompat.Caption"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="求谱详细内容" />
+
+
         </LinearLayout>
 
     </LinearLayout>
 
 
-    <TextView
-        android:id="@+id/post_user_title_tv"
-        style="@style/TextAppearance.AppCompat.Body1"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        tools:text="求谱啊啊~~~~" />
-
-    <TextView
-        android:id="@+id/post_user_type_tv"
-        style="@style/TextAppearance.AppCompat.Caption"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="曲谱类型" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/post_user_content_tv"
+            android:layout_marginLeft="56dp"
+            android:id="@+id/post_user_type_tv"
             style="@style/TextAppearance.AppCompat.Caption"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            tools:text="求谱详细内容" />
+            tools:text="曲谱类型" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="16dp"
             app:srcCompat="@drawable/ic_vec_comment" />
 
         <TextView
             android:id="@+id/post_user_comment_num_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             tools:text="0" />
-    </LinearLayout>
+
+    </RelativeLayout>
 
 
 </LinearLayout>
