--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,10 +14,10 @@
     <View style="@style/SettingDivider" />
 
     <LinearLayout
-        android:layout_marginLeft="24dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:paddingLeft="24dp">
 
         <com.example.q.pocketmusic.view.widget.view.BottomTabView
             android:id="@+id/home_tab_net_tab"
