--- a/app/src/main/res/layout/item_ask_song_comment.xml
+++ b/app/src/main/res/layout/item_ask_song_comment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/content_ll"
     android:orientation="vertical"
     android:padding="@dimen/item_padding_16dp">
 
