--- a/app/src/main/res/layout/activity_other_profile.xml
+++ b/app/src/main/res/layout/activity_other_profile.xml
@@ -7,7 +7,37 @@
     android:orientation="vertical"
     tools:context="com.example.q.pocketmusic.module.user.other.OtherProfileActivity">
 
-    <include layout="@layout/include_appbar_toolbar" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:padding="8dp">
+
+        <ImageView
+            android:id="@+id/head_iv"
+            android:layout_width="@dimen/ico_launcher_72dp"
+            android:layout_height="@dimen/ico_launcher_72dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="24dp"
+            android:src="@mipmap/ico_launcher" />
+
+        <TextView
+            android:id="@+id/user_signature_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/head_iv"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="24dp"
+            android:text="签名"
+            android:textColor="@color/background"
+            android:textSize="18sp" />
+    </RelativeLayout>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
