--- a/app/src/main/res/layout/item_recommend_list.xml
+++ b/app/src/main/res/layout/item_recommend_list.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingRight="8dp"
     android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:paddingTop="8dp">
 
     <LinearLayout
@@ -22,6 +22,14 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             tools:text="歌曲名" />
+
+
+        <TextView
+            android:id="@+id/upload_name_tv"
+            style="@style/TwoTextSecond"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="上传者：琴友" />
 
         <TextView
             android:id="@+id/artist_tv"
