--- a/app/src/main/res/layout/item_local_song.xml
+++ b/app/src/main/res/layout/item_local_song.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
+    android:orientation="horizontal"
     android:padding="@dimen/item_padding_16dp">
 
     <LinearLayout
-        android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
@@ -32,11 +32,19 @@
     </LinearLayout>
 
     <ImageView
-        android:layout_marginRight="8dp"
         android:id="@+id/top_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="8dp"
         app:srcCompat="@drawable/ic_vec_top" />
+
+    <ImageView
+        android:id="@+id/share_song_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="8dp"
+        app:srcCompat="@drawable/ic_vec_upload" />
+
 
     <ImageView
         android:id="@+id/more_iv"
