--- a/app/src/main/res/layout/item_suggestion.xml
+++ b/app/src/main/res/layout/item_suggestion.xml
@@ -12,6 +12,7 @@
         android:text="暂无" />
 
     <LinearLayout
+        android:id="@+id/right_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
