--- a/app/src/main/res/layout/head_suggestion.xml
+++ b/app/src/main/res/layout/head_suggestion.xml
@@ -10,7 +10,7 @@
         style="@style/TextPressAttention"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="有什么意见都可以提出来哦~" />
+        android:text="尽情吐槽,我会在后台暗中观察的ㄟ( ▔, ▔ )ㄏ。\n对于口袋乐谱的发展具有建设性的建议，将获得不定量的硬币奖励哦！" />
 
     <View style="@style/SettingDivider"/>
 </LinearLayout>
