--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,7 +32,7 @@
     <color name="TextGray">#bebebe</color>
     <color name="TabTextGray">#b3b3b3</color>
 
-    <color name="upload_name">#F44336</color>
+    <color name="upload_name">@color/md_red_300</color>
 
 
     <color name="item_divider">#f0f0f0</color>
@@ -45,6 +45,8 @@
 
     <color name="homeTabNormal">#FF000000</color>
     <color name="homeTabPress">@color/colorPrimary</color>
+
+    <color name="net_fragment_text">#999999</color>
 
 
     <!--Material Design颜色备选项-->
