--- a/app/src/main/res/layout/activity_special_column.xml
+++ b/app/src/main/res/layout/activity_special_column.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.q.pocketmusic.module.home.net.acg.ACGActivity">
+    tools:context="com.example.q.pocketmusic.module.home.net.special.SpecialColumnActivity">
 
     <include layout="@layout/include_appbar_toolbar" />
 
