--- a/app/src/main/res/layout/activity_special_list.xml
+++ b/app/src/main/res/layout/activity_special_list.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/activity_help"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.example.q.pocketmusic.module.home.net.special.list.SpecialListActivity">
 
     <include layout="@layout/include_appbar_toolbar" />
-
 
     <com.jude.easyrecyclerview.EasyRecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="never"
-        android:scrollbars="none" />
-
-
+        android:layout_height="match_parent" />
 </LinearLayout>
