--- a/app/src/main/res/layout/item_acg_album.xml
+++ b/app/src/main/res/layout/item_acg_album.xml
@@ -25,6 +25,15 @@
             android:layout_gravity="center"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/number_tv"
+            style="@style/TwoTextMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
