--- a/app/src/main/res/drawable/ic_vec_study.xml
+++ b/app/src/main/res/drawable/ic_vec_study.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="1024.0"
-    android:viewportWidth="1024.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M522.5,69.9c-89.5,0 -159.9,26 -211.1,78.1 -52.1,51.2 -78.1,121.2 -78.1,209.9l129.3,0c0,-54.5 11,-96.4 33,-125.7 24.4,-34.1 64.2,-51.2 119.6,-51.2 43.9,0 78.1,12.2 102.5,36.6 23.6,25.2 35.4,58.6 35.4,100.1 0,30.9 -11,60.6 -33,89.1l-20.7,23.2c-75.7,67.5 -122,117.9 -139.1,151.3 -15.5,30.9 -23.2,69.5 -23.2,115.9l0,20.7 130.6,0L567.6,697.1c0,-30.9 6.5,-58.2 19.5,-81.7 10.6,-21.2 27.2,-41.9 50,-62.2 56.9,-48.8 91.5,-80.5 103.7,-95.2 30.1,-39.9 45.2,-89.5 45.2,-148.8 0,-73.2 -24,-131.3 -72,-174.5C666,91.5 602.2,69.9 522.5,69.9L522.5,69.9zM501.7,783.7c-26,0 -46.8,8.1 -62.2,24.4 -17.9,15.5 -26.8,36.2 -26.8,62.2 0,24.4 8.9,45.2 26.8,62.2 16.2,17.1 37,25.6 62.2,25.6 24.4,0 46,-8.1 64.7,-24.4 17.1,-17.1 25.7,-38.3 25.7,-63.5 0,-26 -8.5,-46.8 -25.7,-62.2C550.1,791.8 528.6,783.7 501.7,783.7L501.7,783.7z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="1024.0"
+    android:viewportWidth="1024.0">
+    <path
+        android:fillColor="@color/vec_black"
+        android:pathData="M522.5,69.9c-89.5,0 -159.9,26 -211.1,78.1 -52.1,51.2 -78.1,121.2 -78.1,209.9l129.3,0c0,-54.5 11,-96.4 33,-125.7 24.4,-34.1 64.2,-51.2 119.6,-51.2 43.9,0 78.1,12.2 102.5,36.6 23.6,25.2 35.4,58.6 35.4,100.1 0,30.9 -11,60.6 -33,89.1l-20.7,23.2c-75.7,67.5 -122,117.9 -139.1,151.3 -15.5,30.9 -23.2,69.5 -23.2,115.9l0,20.7 130.6,0L567.6,697.1c0,-30.9 6.5,-58.2 19.5,-81.7 10.6,-21.2 27.2,-41.9 50,-62.2 56.9,-48.8 91.5,-80.5 103.7,-95.2 30.1,-39.9 45.2,-89.5 45.2,-148.8 0,-73.2 -24,-131.3 -72,-174.5C666,91.5 602.2,69.9 522.5,69.9L522.5,69.9zM501.7,783.7c-26,0 -46.8,8.1 -62.2,24.4 -17.9,15.5 -26.8,36.2 -26.8,62.2 0,24.4 8.9,45.2 26.8,62.2 16.2,17.1 37,25.6 62.2,25.6 24.4,0 46,-8.1 64.7,-24.4 17.1,-17.1 25.7,-38.3 25.7,-63.5 0,-26 -8.5,-46.8 -25.7,-62.2C550.1,791.8 528.6,783.7 501.7,783.7L501.7,783.7z" />
 </vector>
