--- a/app/src/main/res/drawable/ic_vec_support_money.xml
+++ b/app/src/main/res/drawable/ic_vec_support_money.xml
@@ -4,12 +4,12 @@
     android:viewportHeight="1024.0"
     android:viewportWidth="1024.0">
     <path
-        android:fillColor="@color/md_deep_orange_300"
+        android:fillColor="@color/vec_red"
         android:pathData="M512,0C230.4,0 0,230.4 0,512s230.4,512 512,512 512,-230.4 512,-512S793.6,0 512,0zM512,972.8C259.2,972.8 54.4,764.8 54.4,512S259.2,51.2 512,51.2 972.8,259.2 972.8,512 768,972.8 512,972.8z" />
     <path
-        android:fillColor="@color/md_deep_orange_300"
+        android:fillColor="@color/vec_red"
         android:pathData="M512,118.4C297.6,118.4 121.6,294.4 121.6,512S297.6,905.6 512,905.6 905.6,726.4 905.6,512 729.6,118.4 512,118.4zM512,854.4c-188.8,0 -342.4,-153.6 -342.4,-342.4S323.2,169.6 512,169.6 854.4,323.2 854.4,512 700.8,854.4 512,854.4z" />
     <path
-        android:fillColor="@color/md_deep_orange_300"
+        android:fillColor="@color/vec_red"
         android:pathData="M531.2,489.6c-64,-9.6 -96,-32 -96,-60.8 3.2,-32 28.8,-51.2 76.8,-51.2 41.6,0 70.4,19.2 80,60.8l51.2,-12.8c-12.8,-51.2 -48,-80 -108.8,-89.6v-64h-51.2v57.6c-60.8,9.6 -96,41.6 -99.2,96 -3.2,57.6 41.6,92.8 134.4,105.6 60.8,9.6 89.6,32 86.4,64 0,38.4 -32,57.6 -86.4,60.8 -51.2,0 -83.2,-25.6 -96,-80l-51.2,12.8c16,60.8 54.4,92.8 115.2,99.2v57.6h51.2v-57.6c80,-6.4 121.6,-38.4 121.6,-99.2 0,-51.2 -41.6,-86.4 -128,-99.2z" />
 </vector>
