--- a/app/src/main/res/drawable/ic_vec_tab_home_net_normal.xml
+++ b/app/src/main/res/drawable/ic_vec_tab_home_net_normal.xml
@@ -4,9 +4,9 @@
     android:viewportHeight="1024.0"
     android:viewportWidth="1024.0">
     <path
-        android:fillColor="@color/homeTabNormal"
+        android:fillColor="@color/vec_black"
         android:pathData="M1012.5,509.7l-501.1,-468.5 -501.1,467.1c-9.8,9.1 -10.4,24.5 -1.2,34.3 9.2,9.8 24.5,10.3 34.3,1.2l467.9,-436.2 467.9,437.5c4.3,4.1 10.2,6.6 16.6,6.6 0,0 0,0 0,0 6.5,0 13,-2.6 17.7,-7.7 9.2,-9.8 8.7,-25.1 -1.1,-34.3zM1012.5,509.7z" />
     <path
-        android:fillColor="@color/homeTabNormal"
+        android:fillColor="@color/vec_black"
         android:pathData="M859.6,519.3c-13.4,0 -24.3,10.9 -24.3,24.3v372.1h-194.3v-258.8h-259.1v258.8h-194.3v-372.1c0,-13.4 -10.9,-24.3 -24.3,-24.3 -13.4,0 -24.3,10.9 -24.3,24.3v420.6h291.5v-258.8h161.9v258.8h291.5v-420.6c0,-13.4 -10.9,-24.3 -24.3,-24.3zM689.6,171.5h145.7v129.4c0,13.4 10.9,24.3 24.3,24.3 13.4,0 24.3,-10.9 24.3,-24.3v-178h-194.3c-13.4,0 -24.3,10.9 -24.3,24.3 -0,13.4 10.9,24.3 24.3,24.3zM689.6,171.5z" />
 </vector>
