--- a/app/src/main/res/layout/item_other_share.xml
+++ b/app/src/main/res/layout/item_other_share.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="曲谱名"
-        android:textSize="@dimen/item_two_txt_main_14sp" />
+        android:textSize="@dimen/item_two_txt_main" />
 
     <TextView
         android:id="@+id/share_content_tv"
@@ -21,6 +21,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="曲谱描述"
-        android:textSize="@dimen/item_two_txt_second_12sp" />
+        android:textSize="@dimen/item_two_txt_second" />
 
 </LinearLayout>
