--- a/app/src/main/res/drawable/ic_vec_close.xml
+++ b/app/src/main/res/drawable/ic_vec_close.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="1024.0"
-    android:viewportWidth="1024.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M810.7,298.7 L725.3,213.3 512,426.8 298.7,213.3 213.3,298.7 426.7,512 213.3,725.3 298.7,810.7 512,597.4 725.3,810.7 810.7,725.3 597.3,512Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="1024.0"
+    android:viewportWidth="1024.0">
+    <path
+        android:fillColor="@color/vec_black"
+        android:pathData="M810.7,298.7 L725.3,213.3 512,426.8 298.7,213.3 213.3,298.7 426.7,512 213.3,725.3 298.7,810.7 512,597.4 725.3,810.7 810.7,725.3 597.3,512Z" />
 </vector>
