--- a/app/src/main/res/drawable/ic_vec_profile_share.xml
+++ b/app/src/main/res/drawable/ic_vec_profile_share.xml
@@ -4,15 +4,15 @@
     android:viewportHeight="1024.0"
     android:viewportWidth="1024.0">
     <path
-        android:fillColor="@color/md_red_300"
+        android:fillColor="@color/vec_red"
         android:pathData="M551.2,956.8 L466.4,956.8C244.5,956.8 64,776.3 64,554.4L64,469.6C64,247.7 244.5,67.2 466.4,67.2c11.8,0 21.2,9.5 21.2,21.1 0,11.8 -9.5,21.2 -21.2,21.2 -198.6,0 -360.1,161.5 -360.1,360.1l0,84.7c0,198.6 161.5,360.1 360.1,360.1l84.7,0c198.6,0 360.1,-161.5 360.1,-360.1 0,-11.7 9.5,-21.2 21.2,-21.2s21.2,9.5 21.2,21.2C953.7,776.3 773.1,956.8 551.2,956.8z" />
     <path
-        android:fillColor="@color/md_red_300"
+        android:fillColor="@color/vec_red"
         android:pathData="M502.6,325.4c-5.4,0 -10.9,-2 -15,-6.2 -8.3,-8.3 -8.3,-21.7 0,-30l215.9,-215.9c8.3,-8.3 21.8,-8.3 30,0 8.3,8.3 8.3,21.7 0,30L517.5,319.2C513.3,323.4 508,325.4 502.6,325.4z" />
     <path
-        android:fillColor="@color/md_red_300"
+        android:fillColor="@color/vec_red"
         android:pathData="M938.8,329.9c-5.4,0 -10.9,-2 -14.9,-6.3l-216,-215.9c-8.3,-8.3 -8.3,-21.6 0,-30 8.3,-8.3 21.8,-8.3 30,0l215.9,216c8.3,8.3 8.3,21.6 0,29.9C949.7,327.8 944.3,329.9 938.8,329.9z" />
     <path
-        android:fillColor="@color/md_red_300"
+        android:fillColor="@color/vec_red"
         android:pathData="M411.4,723.1c-9.8,0 -18.6,-6.9 -20.7,-17 -2.4,-11.5 4.9,-22.7 16.4,-25 12.3,-2.7 294.7,-70.1 292.4,-587.1 0,-11.7 9.4,-21.2 21.1,-21.2 0.1,0 0.1,0 0.1,0 11.7,0 21.2,9.4 21.2,21.1 2.2,553.8 -312.8,625.9 -326.2,628.6C414.3,722.9 412.8,723.1 411.4,723.1z" />
 </vector>
