--- a/app/src/main/res/layout/activity_suggestion.xml
+++ b/app/src/main/res/layout/activity_suggestion.xml
@@ -7,7 +7,9 @@
     <include layout="@layout/include_appbar_toolbar" />
     <TextView
         android:padding="@dimen/item_padding_16dp"
-        style="@style/TextPressAttention"
+        android:textSize="@dimen/item_two_txt_main"
+        android:textColor="@color/md_red_300"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="尽情吐槽,我会在后台暗中观察的ㄟ( ▔, ▔ )ㄏ。\n对于口袋乐谱的发展具有建设性的建议，将获得不定量的硬币奖励哦！" />
