--- a/app/src/main/res/layout/dialog_edit.xml
+++ b/app/src/main/res/layout/dialog_edit.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginTop="24dp"
         android:text="请输入保存文件名"
-        android:textColor="@color/Text"
+        android:textColor="@color/text"
         android:textSize="22sp" />
 
     <EditText
@@ -56,7 +56,7 @@
             android:background="@drawable/shape_text_press"
             android:gravity="center"
             android:text="确定"
-            android:textColor="@color/Text"
+            android:textColor="@color/text"
             android:textSize="18sp" />
 
     </LinearLayout>
