--- a/app/src/main/res/layout/item_combination_upload.xml
+++ b/app/src/main/res/layout/item_combination_upload.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/content_rl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -36,9 +37,42 @@
             android:layout_height="wrap_content"
             tools:text="描述" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                app:srcCompat="@drawable/ic_vec_download_num"
+                android:id="@+id/download_num_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_marginLeft="8dp"
+                tools:text="1"
+                android:id="@+id/download_num_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:layout_marginLeft="8dp"
+                app:srcCompat="@drawable/ic_vec_agree_num"
+                android:id="@+id/agree_num_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_marginLeft="8dp"
+                tools:text="2"
+                android:id="@+id/agree_num_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
         <View
             style="@style/SettingDivider"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="8dp" />
     </LinearLayout>
 
 
