--- a/app/src/main/res/layout/activity_ask_song.xml
+++ b/app/src/main/res/layout/activity_ask_song.xml
@@ -46,13 +46,7 @@
         app:itemIcoResource="@drawable/ic_vec_content"
         app:itemInputHint="请输入描述" />
 
-    <com.zhy.view.flowlayout.TagFlowLayout
-        android:id="@+id/tag_flow_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="32dp"
-        app:max_select="1" />
+   <include layout="@layout/include_flexbox" />
 
     <LinearLayout
         android:layout_width="match_parent"
