礼包中心，点赞加硬币，专栏

--- a/app/src/main/res/layout/activity_user_notify.xml
+++ b/app/src/main/res/layout/activity_user_notify.xml
@@ -36,4 +36,13 @@
         app:itemTitleText="意见反馈" />
 
     <View style="@style/SettingDivider" />
+
+    <com.example.q.pocketmusic.view.widget.view.IcoTextItem
+        android:id="@+id/gift_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:itemTitleIco="@drawable/ic_vec_gift"
+        app:itemTitleText="礼包中心" />
+
+    <View style="@style/SettingDivider" />
 </LinearLayout>
