--- a/app/src/main/res/layout/item_special_song.xml
+++ b/app/src/main/res/layout/item_special_song.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp">
+
     <TextView
-        style="@style/TwoTextMain"
         android:id="@+id/name_tv"
+        style="@style/TwoTextMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
     <TextView
-        style="@style/TwoTextSecond"
         android:id="@+id/subtitle_tv"
+        style="@style/TwoTextSecond"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
