修复乐器问题，全面改用正则

--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -6,10 +6,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.q.pocketmusic.module.home.net.type.study.StudyActivity">
-    <include layout="@layout/include_appbar_toolbar"/>
-    <TextView
-        android:text="乐器学习版块建设中。。。"
-        android:gravity="center"
+
+    <com.example.q.pocketmusic.view.widget.net.HackyViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/page_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp" />
 </LinearLayout>
