--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,20 +29,20 @@
             app:itemTabSelectIco="@drawable/ic_vec_tab_home_net_press" />
 
         <com.example.q.pocketmusic.view.widget.view.BottomTabView
-            android:id="@+id/home_tab_ask_tab"
+            android:id="@+id/home_tab_convert_tab"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:itemTabName="求谱"
-            app:itemTabNoSelectIco="@drawable/ic_vec_tab_home_ask_normal"
-            app:itemTabSelectIco="@drawable/ic_vec_tab_home_ask_press" />
+            app:itemTabName="转谱"
+            app:itemTabNoSelectIco="@drawable/ic_vec_tab_home_convert_normal"
+            app:itemTabSelectIco="@drawable/ic_vec_tab_home_convert_press" />
 
         <com.example.q.pocketmusic.view.widget.view.BottomTabView
             android:id="@+id/home_tab_local_tab"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:itemTabName="本地谱单"
+            app:itemTabName="本地"
             app:itemTabNoSelectIco="@drawable/ic_vec_tab_home_local_normal"
             app:itemTabSelectIco="@drawable/ic_vec_tab_home_local_press" />
 
