--- a/app/src/main/res/layout/fragment_home_convert_list.xml
+++ b/app/src/main/res/layout/fragment_home_convert_list.xml
@@ -1,10 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/include_appbar_toolbar" />
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:title="">
+
+        <ImageView
+            android:id="@+id/publish_convert_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_vec_publish" />
+
+        <TextView
+            android:id="@+id/title_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="转谱"
+            android:textColor="@color/textPrimary"
+            android:textSize="22sp" />
+
+        <ImageView
+            android:id="@+id/search_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="16dp"
+            app:srcCompat="@drawable/ic_vec_search" />
+    </android.support.v7.widget.Toolbar>
+
 
     <com.jude.easyrecyclerview.EasyRecyclerView
         android:id="@+id/convert_list_recycler"
